@@ -1,6 +1,23 @@
 module ScrewUnit
   module Representations
     class Spec < JsTestCore::Representations::Spec
+      class << self
+        def project_js_files
+          @project_js_files ||= []
+        end
+        attr_writer :project_js_files
+
+        def project_css_files
+          @project_css_files ||= []
+        end
+        attr_writer :project_css_files
+
+        def jquery_js_file
+          @jquery_js_file ||= "/core/jquery-1.3.2.js"
+        end
+        attr_writer :jquery_js_file
+      end
+
       needs :spec_files
       def title_text
         "Screw Unit suite"
@@ -101,13 +118,19 @@ module ScrewUnit
       end
 
       def project_js_files
+        self.class.project_js_files.each do |file|
+          script :src => file, :type => "text/javascript"
+        end
       end
 
       def project_css_files
+        self.class.project_css_files.each do |file|
+          link :href => file, :type => "text/css", :media => "screen", :rel => "stylesheet"
+        end
       end
 
       def jquery_js_file
-        "/core/jquery-1.3.2.js"
+        self.class.jquery_js_file
       end
 
       def body_content
